force-app/main/default/objects/Routing_ID__c/Routing_ID__c.object-meta.xml
<CustomObject>
    <label>Routing ID</label>
    <nameField>
        <displayFormat>RID-{0000000}</displayFormat>
        <label>Routing IDs</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>