force-app/main/default/objects/Routing_ID__c/fields/BOM_Routing__c.field-meta.xml
<CustomField>
    <fullName>BOM_Routing__c</fullName>
    <label>BOM Routing</label>
    <referenceTo>BOM_Routing__c</referenceTo>
    <relationshipLabel>Routing IDs</relationshipLabel>
    <relationshipName>Routing_IDs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>