force-app/main/default/objects/Routing_ID__c/fields/Cycle_Time__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Time__c</fullName>
    <inlineHelpText>Process Step Cycle Time Expressed in Minutes</inlineHelpText>
    <label>Cycle Time</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>