force-app/main/default/objects/Routing_ID__c/fields/Labor_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Labor_Efficiency__c</fullName>
    <label>Labor Efficiency</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>