force-app/main/default/objects/Routing_ID__c/fields/Labor_Time__c.field-meta.xml
<CustomField>
    <fullName>Labor_Time__c</fullName>
    <inlineHelpText>Cycle time expressed in minutes</inlineHelpText>
    <label>Labor Time</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>