force-app/main/default/objects/Routing_ID__c/fields/Machine_Time__c.field-meta.xml
<CustomField>
    <fullName>Machine_Time__c</fullName>
    <inlineHelpText>Express in Minutes</inlineHelpText>
    <label>Machine Time</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>