force-app/main/default/objects/Routing_ID__c/fields/Parallel_Process__c.field-meta.xml
<CustomField>
    <fullName>Parallel_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Parallel process enables you to prepare several BOM components at the same time for final assembly.</inlineHelpText>
    <label>Parallel Process</label>
    <type>Checkbox</type>
</CustomField>