force-app/main/default/objects/Routing_ID__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process #</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>