force-app/main/default/objects/Routing_ID__c/fields/Process_Description__c.field-meta.xml
<CustomField>
    <fullName>Process_Description__c</fullName>
    <label>Process Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>