force-app/main/default/objects/Routing_ID__c/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <label>Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch Process</fullName>
            </value>
            <value>
                <fullName>Continuous Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>