force-app/main/default/objects/Routing_ID__c/fields/Setup_Time__c.field-meta.xml
<CustomField>
    <fullName>Setup_Time__c</fullName>
    <inlineHelpText>Expressed in Minutes</inlineHelpText>
    <label>Setup Time</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>