force-app/main/default/objects/Routing_ID__c/fields/Teardown_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Teardown_Efficiency__c</fullName>
    <label>Teardown Efficiency</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>