force-app/main/default/objects/Routing_ID__c/fields/Work_Center__c.field-meta.xml
<CustomField>
    <fullName>Work_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Center</label>
    <referenceTo>Work_Centers__c</referenceTo>
    <relationshipName>BOM_Routings</relationshipName>
    <type>Lookup</type>
</CustomField>